[package]
name = "rusty-door"
version = "0.0.1"
edition = "2021"
authors = ["emilyhong <emily.hong@viam.com>"]
resolver = "2"
rust-version = "1.83"

[profile.release]
debug = true
opt-level = "z"

[profile.dev]
debug = true
opt-level = "z"

[dependencies.micro-rdk]
git = "https://github.com/viamrobotics/micro-rdk.git"
version = "0.4.1-rc10"
rev = "v0.4.1-rc10"
features = [
  "esp32",
  "binstart",
  
]

[dependencies]
async-channel = "2"
embedded-hal = { version = "~0.2", features = ["unproven"]}
embedded-svc = "0.27"
futures-lite = "2"
log = "0.4"
hw201 = { path = "https://github.com/ehhong/HW201-viam-module" }

[build-dependencies]
cargo_metadata = "0.19"
embuild = "0.32"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.esp-idf-sys]
# TODO(RSDK-8998): Upgrade ESP-IDF to latest stable
esp_idf_version = "v4.4.8"
esp_idf_tools_install_dir = "custom:target/.embuild/espressif"
esp_idf_sdkconfig_defaults = [
  "sdkconfig.defaults",
]


